--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.16.2",
     "jquery": "^3.3.1",
     "ng2-opd-popup": "^1.1.21",
+    "ngx-slick": "^0.1.3",
     "rxjs": "^5.5.2",
     "typescript": "~2.4.2",
     "zone.js": "^0.8.14"
